2009-08-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Fix Make keybindings (patch by Lex Trotman, thanks).
 * src/geany.h:
   Define G_GNUC_WARN_UNUSED_RESULT if GLib < 2.10.
 * doc/plugins.dox:
   Mention Files link at top for header files; demoplugin.c.
   Minor edits; remove 'far from being complete'.
 * src/keyfile.c, src/keyfile.h, src/main.c,
   data/filetype_extensions.conf, HACKING:
   Remove --generate-data-files argument & code - just edit
   filetype_extensions.conf by hand (filetype order was broken
   anyway).
   Add *.H extension for C++ (useful for non-Windows systems).


2009-08-27  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c
   Fix implementation of loading old project files with base
   directories. Use project_make_base_path instead of re-
   implementing.  Now depends on project.c reading base dir
   prior to calling load_build_menu.
 * src/build.c
   Change usage of project base directory to conform with
   previous documented behavior when loading old project files.
 * src/build.c:
   Change make custom and make object to ignore make in base path
   when reading old project file settings.  Changed some indent
   spaces to tabs. Fix missing compile menu accelerator.


2009-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/plugins.dox:
   Add warning about not using undocumented features.
   Add reference to HACKING for plugin API development.
 * HACKING:
   Add section 'Plugin API/ABI design'.
 * src/keybindings.h, src/makefile.win32, src/project.h,
   src/filetypes.h, src/Makefile.am, wscript:
   Use GEANY_PRIVATE to hide some fields from plugins.
 * src/build.c:
   Fix invalid memory read (#2844632, patch by Lex Trotman, thanks).
 * src/build.c, src/build.h, src/project.c:
   Use build_ prefix for 3 functions in build.h; add a static modifier.


2009-08-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c: